[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/collectibles/gem.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/new_transparent.png" type="Texture" id=2]
[ext_resource path="res://Assets/audio/sounds_effects/gem2.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=5]
radius = 17.0294

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 169, 169, 169 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 169, 169, 169, 169 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 338, 169, 169, 169 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 169, 169, 169, 169 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 169, 169, 169 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24, -16 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "bounce"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[node name="gem" type="Area2D"]
modulate = Color( 0, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0, 0.494118, 1, 1 )
position = Vector2( -24, -16 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
frame = 3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/bounce = SubResource( 10 )

[node name="collect_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.483

[connection signal="body_entered" from="." to="." method="_on_Gem2_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
